--- a/about.html
+++ b/about.html
@@ -113,39 +113,33 @@
   <!-- 6 Equal Boxes Layout -->
   <div class="grid-container">
     <div class="box">
-      <h3>Box 1 Title</h3>
-      <p>This is the
-         description for Box 1.</p>
+      <h3>ONEDRIVE</h3>
+      <H2>sử dụng lưu trữ các thư mục về rom,work, powpoint,...</H2>
     </div>
     <div class="box">
-      <h3>Box 2 Title</h3>
-      <p>This is the
-         description for Box 2.</p>
+      <h3>GoogleDrive</h3>
+      <p>lưu trữ gdrive của tài khoản,...</p>
     </div>
     <div class="box">
-      <h3>Box 3 Title</h3>
-      <p>This is the 
-        description for Box 3.</p>
+      <h3>??????</h3>
+      <p>.</p>
     </div>
     <div class="box">
-      <h3>Box 4 Title</h3>
-      <p>This is the 
-        description for Box 4.</p>
+      <h3>??????</h3>
+      <p></p>
     </div>
     <div class="box">
-      <h3>Box 5 Title</h3>
-      <p>This is the 
-        description for Box 5.</p>
+      <h3>??</h3>
+      <p></p>
     </div>
     <div class="box">
-      <h3>Box 6 Title</h3>
-      <p>This is the 
-        description for Box 6.</p>
+      <h3>?????</h3>
+      <p></p>
     </div>
   </div>
 
   <!-- Back to Home Button -->
-  <a href="index.html" class="back-btn">Back to Home</a>
+  <a href="index.html" class="back-btn">Quay Lại</a>
 
   <script>
     // Generate static background stars with random size
