--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
 </head>
 <body>
   <h1 id="title">
-    <span class="welcome">Welcome to the</span>
-    <span class="shooting-experience">Static Stars Experience!</span>
+    <span class="welcome">BẮT ĐẦU </span>
+    <span class="shooting-experience"></span>
   </h1>
 
   <!-- Buttons -->
   <div class="buttons" id="buttons">
-    <button class="btn" id="blurWorkBtn">Blur Work</button>
-    <button class="btn" id="aboutBtn"><a href="about.html" style="color: white; text-decoration: none;">About</a></button>
+    <button class="btn" id="blurWorkBtn">Thông Tin</button>
+    <button class="btn" id="aboutBtn"><a href="about.html" style="color: white; text-decoration: none;">Lưu Trữ</a></button>
   </div>
 
   <div class="night" id="night"></div>
@@ -142,8 +142,9 @@
   <!-- Introduction Box -->
   <div class="border-box" id="introBox">
     <div class="content-box">
-      <h2>About the Experience</h2>
-      <p>This is an immersive experience showcasing the beauty of stars in the night sky. Relax and enjoy the magical view!</p>
+      <h2>Đây là web lưu trữ</h2>
+      <p>đây là web lưu trữ các đường link lưu trừ thông tin. Ví dụ: link one drive. google drive, youtube, 1 số ai
+      </p>
     </div>
   </div>
 
